feat(springboot): refactor + use http interface and webclient